Fix list spacing.

--- a/jujugui/static/gui/src/app/components/machine-view/column/_column.scss
+++ b/jujugui/static/gui/src/app/components/machine-view/column/_column.scss
@@ -38,7 +38,11 @@
 
     ul {
       padding-left: 10px;
-      list-style-position: inside;
+      list-style-position: outside;
+
+      li {
+        margin-bottom: 5px;
+      }
     }
   }
 
